Add instructions to release server using mvn:release
Use maven wagon to upload tar.gz to S3
Clean up unused profiles.
Tag docker image with version OR latest using %l macro.