@@ -54,7 +54,6 @@
         <version.assembly.plugin>3.4.1</version.assembly.plugin>
         <version.war.plugin>2.5</version.war.plugin>
         <version.google.formatter.plugin>0.4</version.google.formatter.plugin>
-        <version.docker.maven.plugin>0.31.0</version.docker.maven.plugin>
         <version.protoc.maven.plugin>3.8.0</version.protoc.maven.plugin>
         <version.javadoc.plugin>3.3.2</version.javadoc.plugin>
         <version.code.formatter>2.16.0</version.code.formatter>
@@ -245,11 +244,6 @@
                     <artifactId>build-helper-maven-plugin</artifactId>
                     <version>${version.build-helper.plugin}</version>
                 </plugin>
-                <plugin>
-                    <groupId>io.fabric8</groupId>
-                    <artifactId>docker-maven-plugin</artifactId>
-                    <version>0.40.1</version>
-                </plugin>
             </plugins>
         </pluginManagement>
         <plugins>
@@ -257,8 +251,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
                 <configuration>
-                    <pushChanges>false</pushChanges>
-                    <releaseProfiles>docs,assembly,release-sign-artifacts,release</releaseProfiles>
+                    <tagNameFormat>v@{project.version}</tagNameFormat>
+                    <autoVersionSubmodules>true</autoVersionSubmodules>
+                    <releaseProfiles>quick,release</releaseProfiles>
                 </configuration>
             </plugin>
             <plugin>
@@ -299,21 +294,6 @@
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
-                <groupId>io.fabric8</groupId>
-                <artifactId>docker-maven-plugin</artifactId>
-                <extensions>true</extensions>
-                <configuration>
-                    <images>
-                        <image>
-                            <name>yugabyte/cdcsdk-server:${project.version}</name>
-                            <build>
-                                <dockerFile>Dockerfile</dockerFile>
-                            </build>
-                            </image>
-                        </images>
-                </configuration>
-            </plugin>
         </plugins>
     </build>
     <profiles>
@@ -346,100 +326,8 @@
         <profile>
             <id>release</id>
             <properties>
-                <skipLongRunningTests>false</skipLongRunningTests>
+                <skipLongRunningTests>true</skipLongRunningTests>
             </properties>
-        </profile>
-        <profile>
-            <id>performance</id>
-            <properties>
-                <skipLongRunningTests>false</skipLongRunningTests>
-            </properties>
-        </profile>
-        <profile>
-            <id>docs</id>
-            <activation>
-                <activeByDefault>false</activeByDefault>
-                <property>
-                    <name>docs</name>
-                    <value>true</value>
-                </property>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-javadoc-plugin</artifactId>
-                        <version>${version.javadoc.plugin}</version>
-                        <configuration>
-                            <show>private</show>
-                            <nohelp>true</nohelp>
-                        </configuration>
-                        <executions>
-                            <execution>
-                                <id>attach-javadocs</id>
-                                <goals>
-                                    <goal>jar</goal>
-                                </goals>
-                            </execution>
-                            <execution>
-                                <id>attach-test-javadocs</id>
-                                <goals>
-                                    <goal>test-jar</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>release-sign-artifacts</id>
-            <activation>
-                <property>
-                    <name>performRelease</name>
-                    <value>true</value>
-                </property>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-gpg-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <id>sign-artifacts</id>
-                                <phase>verify</phase>
-                                <goals>
-                                    <goal>sign</goal>
-                                </goals>
-                                <configuration>
-                                    <gpgArguments>
-                                        <arg>--pinentry-mode</arg>
-                                        <arg>loopback</arg>
-                                    </gpgArguments>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>jdk11</id>
-            <activation>
-                <jdk>11</jdk>
-            </activation>
-            <properties>
-                <modules.argline>--illegal-access=permit</modules.argline>
-                <maven.compiler.release>11</maven.compiler.release>
-            </properties>
-        </profile>
-        <profile>
-            <id>oracle</id>
-            <modules>
-                <module>debezium-connector-oracle</module>
-                <module>debezium-microbenchmark-oracle</module>
-            </modules>
         </profile>
     </profiles>
 </project>
